# redstone_compiler

./: .gitignore  Cargo.toml  TODO  build.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dev.yml  master.yml  rust.yml
src/: error.rs  lib.rs  main.rs
src/backend/: compiler.rs  error.rs  instruction.rs  mod.rs  module.rs  target.rs  types.rs
src/backend/module/: colorscreen.rs  io.rs  list.rs  mod.rs  ram.rs  screen.rs
src/backend/redstone/: compiler.rs  error.rs  instruction.rs  mod.rs  types.rs
src/backend/redstone/module/: colorscreen.rs  io.rs  list.rs  mod.rs  ram.rs  screen.rs
src/backend/w4/: compiler.rs  error.rs  mod.rs
src/backend/w4/module/: draw.rs  input.rs  mod.rs  sound.rs  storage.rs
src/frontend/: ast.rs  error.rs  lexer.rs  location.rs  mod.rs  parser.rs  test.rs
src/runtime/: environment.rs  interpreter.rs  mod.rs  values.rs
tests/: e2e.rs  lexer.rs
