[package]
name = "redstone_compiler"
version = "0.0.8"
repository = "https://github.com/Christiano300/redstone_compiler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table_enum = "0.2.0"
vec1 = "1.10.1"
colored = "2.1.0"
fastrand = "2.0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
