[package]
name = "redstone_compiler"
version = "0.0.9"
repository = "https://github.com/Christiano300/redstone_compiler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table_enum = "0.3.0"
vec1 = "1.12.0"
colored = "2.1.0"
fastrand = "2.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = {level = "deny", priority = 1}
pedantic = "deny"
nursery = "deny"
cast_possible_truncation = {level = "allow", priority = 1}
cast_sign_loss = {level = "allow", priority = 1}
cast_possible_wrap = {level = "allow", priority = 1}
