[package]
name = "redstone_compiler"
version = "0.2.1"
repository = "https://github.com/Christiano300/redstone_compiler"
edition = "2024"

[features]
default = ["redstone", "w4"]
redstone = []
w4 = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
table_enum = "0.3.0"
vec1 = "1.12.0"
colored = "3.1.1"
fastrand = "2.3.0"
static_assertions = "1.1.0"
wasm-encoder = "0.245.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "warn", priority = 1 }
pedantic = "warn"
nursery = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
